[gd_scene load_steps=4 format=3 uid="uid://iq15pnqp1p3n"]

[ext_resource type="Script" path="res://scripts/MakeGravityWell.gd" id="1_4s8h1"]
[ext_resource type="PackedScene" uid="uid://u6gk8ntmnifh" path="res://scenes/ball-group.tscn" id="2_rlxa8"]
[ext_resource type="PackedScene" uid="uid://cndnlt3bclw7u" path="res://scenes/gravity-well.tscn" id="3_o47sc"]

[node name="gravity_test" type="Node2D"]
script = ExtResource("1_4s8h1")
test_ball_scene = ExtResource("2_rlxa8")

[node name="ball_timer" type="Timer" parent="."]

[node name="spawn_position" type="Node2D" parent="."]
position = Vector2(109, 95)

[node name="gravity_well" parent="." instance=ExtResource("3_o47sc")]
position = Vector2(866, 644)

[node name="Ball" parent="." instance=ExtResource("2_rlxa8")]
position = Vector2(239, 211)

[connection signal="timeout" from="ball_timer" to="." method="_on_ball_timer_timeout"]
